--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,6 +1,12 @@
 <div
   class="FullyRootedDemoScreen"
-  style="width: 1920px; height: 1080px; position: relative; background: white"
+  style="
+    max-width: 100%;
+    width: 1920px;
+    height: 1080px;
+    position: relative;
+    background: white;
+  "
 >
   <div
     class="MySubscriptionBox"
