--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -26,18 +26,18 @@
         and delivered to
         <strong>{{ selectedAddress?.street }}</strong> on
         <strong
-          >{{ selectedDeliveryDate2 | date : "EEEE, MMMM d"
-          }}{{ selectedDeliveryDate2 | date : "d" | dateSuffix }}</strong
+          >{{ showOrderDate | date : "EEEE, MMMM d"
+          }}{{ showOrderDate | date : "d" | dateSuffix }}</strong
         >
       </p>
-      <p>
+      <!-- <p>
         Please make changes to your next order
         <strong
           >before {{ getOlderDay(selectedDeliveryDate2, 2) | date : "EEEE" }} @
           11:59pm</strong
         >
         for {{ selectedDeliveryDate2 | date : "EEEE" }} Delivery.
-      </p>
+      </p> -->
     </div>
     <table>
       <thead>
