--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -30,10 +30,7 @@
       </p>
       <p *ngIf="deliveryDate">
         Please make changes to your next order
-        <strong
-          >before {{ getOlderDay(deliveryDate, 1) | date : "EEEE" }} @
-          11:59pm</strong
-        >
+        <strong>before {{ getOlderDay(deliveryDate) }} @ 11:59pm</strong>
         for {{ deliveryDate | date : "EEEE" }} Delivery.
       </p>
     </div>
