--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h1>
     My Subscription Box:
-    <select [(ngModel)]="selectedOrder">
-      <option *ngFor="let order of orders" [ngValue]="order">
+    <select *ngIf="siteId" [(ngModel)]="selectedOrder">
+      <option *ngFor="let order of mockData[siteId].orders" [ngValue]="order">
         {{ order.OrderId }}
       </option>
     </select>
@@ -14,6 +14,7 @@
       <p>
         Your next order will be processed on
         <select
+          *ngIf="siteId"
           [(ngModel)]="orderDate"
           (change)="handleOrderDateChange($event)"
         >
@@ -139,8 +140,11 @@
         Delivery via <span class="underline">{{ selectedDelivery }}</span>
       </h2>
       <p>Ships To:</p>
-      <select [(ngModel)]="selectedAddress">
-        <option *ngFor="let address of addresses" [ngValue]="address">
+      <select *ngIf="siteId" [(ngModel)]="selectedAddress">
+        <option
+          *ngFor="let address of mockData[siteId].addresses"
+          [ngValue]="address"
+        >
           {{ address.name || "Address" }}
         </option>
       </select>
