--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -49,7 +49,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr *ngIf="siteId === 8">
           <td>
             <img
               style="width: 120px; height: 120px"
